@@ -58,8 +58,6 @@
     </snapshotRepository>
   </distributionManagement>
 
-
-
   <dependencyManagement>
     <dependencies>
 
@@ -240,8 +238,10 @@
               <additionalJOption>-J-Dhttp.agent=maven-javadoc-plugin</additionalJOption>
             </additionalJOptions>
             <additionalOptions>
-              <additionalOption>--add-exports</additionalOption>
+              <!--
+              <additionalOption>-add-exports</additionalOption>
               <additionalOption>jdk.compiler/com.sun.tools.javac.code=org.microbean.lang</additionalOption>
+              -->
               <additionalOption>--add-stylesheet</additionalOption>
               <additionalOption>${project.basedir}/src/main/javadoc/css/fonts.css</additionalOption>
               <additionalOption>--enable-preview</additionalOption>
@@ -294,6 +294,10 @@
           <version>3.0.0-M7</version>
           <configuration>
             <argLine>
+              <!--
+              -add-exports java.base/jdk.internal.vm.annotation=org.microbean.lang
+              -add-exports java.base/jdk.internal.util.random=org.microbean.lang
+              -->
               --add-exports jdk.compiler/com.sun.tools.javac.code=org.microbean.lang
               --add-opens jdk.compiler/com.sun.tools.javac.model=org.microbean.lang
               --add-opens org.microbean.lang/org.microbean.lang=ALL-UNNAMED
